--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -596,7 +596,7 @@ Effect에서 객체를 만들면 객체가 `createConnection`으로 전달됩니
 
 ### 힌트
 
-두 가지 함수, 즉 `onMessage` 및 `createConnection`를 전달하는 것입니다. 둘 다 `App` 재렌더링 시마다 처음부터 생성됩니다. 
+여러분은 지금 두 가지 함수, 즉 `onMessage` 및 `createConnection`를 전달하고 있습니다. 둘 다 `App`의 모든 렌더링 마다 처음부터 생성됩니다. 
 이 함수들은 매번 새로운 값으로 간주되므로 Effect를 다시 호출합니다.
 
 이러한 함수 중 하나는 이벤트 처리기입니다. 이벤트 핸들러 함수의 새 값에 "반응"하지 않고 이벤트 핸들러를 Effect라고 부르는 방법을 알고 계시나요? 그것은 도움이 될 것입니다!
