--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -599,7 +599,7 @@ Effect에서 객체를 만들면 객체가 `createConnection`으로 전달됩니
 여러분은 지금 두 가지 함수, 즉 `onMessage` 및 `createConnection`를 전달하고 있습니다. 둘 다 `App`의 모든 렌더링 마다 처음부터 생성됩니다. 
 이 함수들은 매번 새로운 값으로 간주되므로 Effect를 다시 호출합니다.
 
-이러한 함수 중 하나는 이벤트 처리기입니다. 이벤트 핸들러 함수의 새 값에 "반응"하지 않고 이벤트 핸들러를 Effect라고 부르는 방법을 알고 계시나요? 그것은 도움이 될 것입니다!
+이러한 함수 중 하나는 이벤트 핸들러입니다. 이벤트 핸들러 함수의 새 값에 "반응"하지 않게끔 하면서도 Effect 내부에서 이벤트 핸들러를 호출하게 하는 방법을 알고 계시나요? 그것은 도움이 될 것입니다!
 
 이러한 함수 중 다른 함수는 가져온 API 메서드에 일부 상태를 전달하는 경우에만 존재합니다. 
 이 기능이 정말 필요합니까? 전해져야하는 필수 정보는 무엇인가요? 일부 import를 `App.js`에서 `ChatRoom.js`로 이동해야 할 수 있습니다.
