--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -587,7 +587,7 @@ Effect에서 객체를 만들면 객체가 `createConnection`으로 전달됩니
 이 예제는 암호화 여부와 상관없이 대화에 연결됩니다. 이 확인란을 선택 취소하고 암호화를 설정하거나 해제할 때 콘솔의 다양한 메시지를 확인합니다. 
 방을 바꿔 보세요. 그런 다음 테마를 전환해 보세요. 대화방에 연결되면 몇 초마다 새 메시지를 받게 됩니다. 선택한 테마와 색상이 일치하는지 확인합니다.
 
-이 예에서는 테마를 변경할 때마다 채팅이 다시 연결됩니다. 이거 고쳐주세요. 수정 후 테마를 변경하면 대화가 다시 연결되지 않지만 암호화 설정을 전환하거나 대화방을 변경하면 다시 연결됩니다.
+이 예에서는 테마를 변경할 때마다 채팅이 다시 연결됩니다. 이걸 고쳐보세요. 수정 후 테마를 변경하면 대화가 다시 연결되지 않지만 암호화 설정을 전환하거나 대화방을 변경하면 다시 연결됩니다.
 
 `chat.js`에서 코드를 변경하지 마세요. 그 외에는 코드가 동일한 동작을 수행하는 한 모든 코드를 변경할 수 있습니다. 
 예를 들어, 전해지는 prop을 변경하는 것이 도움이 될 수 있습니다.
