--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -199,7 +199,7 @@ function ChatRoom({ roomId, theme }) {
   // ...
 ```
 
-이 예제를 확인하고, 유저 경험에 문제를 발견할 수 있는지 확인해보세요.
+이 예제를 확인하고, 유저 경험에 문제를 발견해보세요.
 
 <Code src="https://codesandbox.io/s/vxw9h1?file=%2FApp.js&utm_medium=sandpack" />
 
