--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -106,7 +106,7 @@ function ChatRoom({ roomId }) {
 선택하는 것입니다. 이벤트핸들러와 Effects는 변경들에 다르게 반응합니다.
 
 - **이벤트 핸들러 내부의 로직은 *비반응형*입니다** 그것은 유저가 같은 상호작용(클릭과 같은)을 수행하지 않는한 다시 실행되지 않습니다.
-  이벤트 핸들러는 그들의 변경에 "반응하지" 않고 반응형 값을 읽을 수 있습니다
+  이벤트 핸들러는 반응형 값의 변경에 "반응하지" 않고 반응형 값을 읽을 수 있습니다
 - **Effects 내부의 로직은 _반응형입니다._ ** 만약 여러분의 Effect가 반응형 값을 읽는다면, [종속성으로 표시](https://react.dev/learn/lifecycle-of-reactive-effects#effects-react-to-reactive-values)하세요.
   그러면, 리렌더링이 값을 변경하면, React는 Effect의 로지긍ㄹ 새로운 값으로 재실행합니다.
 
