--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -124,7 +124,7 @@ sendMessage(message);
 
 유저의 관점에서 **`message`의 변경이 그들이 메시지를 보내기를 원한다는 의미가 _아닙니다._**
 이는 그저 유저가 타이핑중이라는 의미입니다. 다르게 말하면, 메시지를 보내는 것은 반응형이면 안됩니다.
-그 것은 `반응형 값`이 변경되었다고해서 재실행되면 안됩니다. 이 것이 이벤트 핸들러에 속하는 이유입니다.
+이 로직은 `반응형 값`이 변경되었다고해서 재실행되면 안됩니다. 이 것이 이벤트 핸들러에 속하는 이유입니다.
 
 ```js
 function handleSendClick() {
