--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -55,7 +55,7 @@ function ChatRoom({ roomId }) {
 
 ## Effects는 동기화가 필요할 때 항상 실행됩니다
 
-여러분이 컴포넌트와 채팅방의 연결을 유지해야함 또한 상기해보세요. 코드가 어떻게 될까요?
+여러분이 컴포넌트와 채팅방의 연결을 유지해야 한다는 것도 상기해보세요. 코드가 어떻게 될까요?
 
 이 코드의 실행 *이유*는 특정 상호작용을 위한 것이 아닙니다. 유저가 채팅방 화면에 왜 혹은 어떻게 향하게 되었는지는 중요하지 않습니다.
 지금 사용자는 채팅방 화면을 보고있고 상호작용하고 있어야 하며, 컴포넌트는 선택된 채팅서버와 연결되어 있어야합니다. 채팅방 컴포넌트가
