--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -51,7 +51,7 @@ function ChatRoom({ roomId }) {
 }
 ```
 
-이벤트 핸들러로는, 여러분은 `sendMessage(message)`가 _오직_ 유저가 버튼을 클릭했을 때만 동작하도록 합니다.
+이벤트 핸들러를 사용했을 때, 여러분은 `sendMessage(message)`가 _오직_ 유저가 버튼을 클릭했을 때만 동작하도록 합니다.
 
 ## Effects는 동기화가 필요할 때 항상 실행됩니다
 
