--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -3,7 +3,7 @@ import { Code } from '../../../src/components/Code';
 # Effects에서 이벤트 분리하기
 
 이벤트 핸들러는 여러분이 같은 상호작용을 다시 행할때만 재실행됩니다. 이벤트 핸들러와 다르게,
-Effects는 직전 렌더링과는 다른 값을 가지는 prop이나 상태 변수같은, Effects가 읽는 어떤 값들에 재동기화합니다.
+Effects는 직전 렌더링과는 다른 값을 가지는 prop이나 상태 변수같은, Effects가 읽는 어떤 값들에 의해 재동기화합니다.
 때때로, 여러분은 이 두 동작을 섞고 싶을 것입니다: 특정 값들에만 반응하여 재랜더링되는 Effect. 이 페이지에서 여러분이
 어떻게 할 수 있는지를 알려드립니다.
 
