--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -401,7 +401,7 @@ const onVisit = useEffectEvent((visitedUrl) => {
 useEffect(() => {
   setTimeout(() => {
     onVisit(url);
-  }, 5000); // Delay logging visits
+  }, 5000); // 방문 여부의 기록을 지연시킵니다.
 }, [url]);
 ```
 
