--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -216,7 +216,7 @@ showNotification('Connected!', theme);
 
 이 비반응형 로직을 반응형 Effect에서 분리해야합니다.
 
-## Effect 이벤트 선언하기
+### Effect 이벤트 선언하기
 
 :::danger Under Construction
 이 섹션은 안정 React 버전에서 **릴리즈되지 않은 실험적인 API**를 설명합니다.
