--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -266,7 +266,7 @@ function ChatRoom({ roomId, theme }) {
 
 Effect 이벤트들이 이벤트 핸들러와 아주 유사하다고 생각할 수 있습니다. 주된 차이점은 이벤트 핸들러는 유저 상호작용에
 반응하여 실행되는 것임에 반해, Effect 이벤트는 Effects에서 여러분에 의해 실행된다는 것입니다.
-Effect 이벤트는 여러분이 Effects의 반응성과 반응형이면 안되는 코드같의 "체인을 부수도록" 해줍니다.
+Effect 이벤트는 여러분이 Effects의 반응성과 반응형이면 안되는 코드 사이의 "체인을 부수도록" 해줍니다.
 
 ## Effect 이벤트로 최신의 props와 상태를 읽기
 
