--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -166,7 +166,7 @@ Effects는 반응형이므로, `createConnection(serverUrl, roomId)`와 `connect
 
 여러분이 반응형 로직과 비반응형 로직을 섞기를 원한다면 일이 더 복잡해집니다.
 
-예를들어, 여러분이 유저가 채팅에 연결되었을때 알림을 보여주고싶다고 가정합시다. 여러분이 props에서 현재 테마(다크 혹은 라이트)를 읽어
+예를들어, 유저가 채팅에 연결되었을때 알림을 보여주고싶다고 가정해 봅시다. 여러분이 props에서 현재 테마(다크 혹은 라이트)를 읽어
 알맞은 색깔로 알림을 보여줄 수 있습니다.
 
 ```js
