--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -219,7 +219,7 @@ showNotification('Connected!', theme);
 ### Effect 이벤트 선언하기
 
 :::danger Under Construction
-이 섹션은 안정 React 버전에서 **릴리즈되지 않은 실험적인 API**를 설명합니다.
+이 섹션은 아직 정식 React 버전에 **릴리즈되지 않은 실험적인 API**를 설명합니다.
 :::
 
 [`useEffectEvent`](https://react.dev/reference/react/experimental_useEffectEvent)라 볼리는 특별한 훅을 사용하여 여러분의 Effect에서
