--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -30,7 +30,7 @@ React는 `useState`, `useContext`, `useEffect`와 같은 내장 훅들을 갖고
 
 네트워크를 켜고 꺼보시고, 이 `StatusBar`가 여러분의 행동에 반응하여 어떻게 업데이트 되는지 살펴보세요.
 
-또한 여러분이 다른 컴포넌트에서 같은 로직을 사용하고 싶다고 상상해봅시다.
+*또한* 여러분이 다른 컴포넌트에서 같은 로직을 사용하고 싶다고 상상해봅시다.
 네트워크가 꺼진 동안 “저장”대신 “연결중…”을 보이고 비활성화되는 저장버튼을 구현하고 싶습니다.
 
 시작을 위해, `isOnline`상태와 Effect를 `SaveButton`에 복사 & 붙여넣기하세요.
