--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -88,7 +88,7 @@ function useOnlineStatus() {
 }
 ```
 
-함수의 마지막에는 `isOnline`을 리턴하세요. 이는 여러분의 컴포넌트가 그 값을 읽도록 합니다.
+함수의 마지막에는 `isOnline`을 리턴하세요. 이는 여러분의 컴포넌트가 그 값을 읽도록 합니다:
 
 <Code src="https://codesandbox.io/s/9x38on?file=%2FApp.js&utm_medium=sandpack" />
 
