--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -410,7 +410,7 @@ export function useChatRoom({ serverUrl, roomId, onReceiveMessage }) {
 
 동작은 하겠지만, 여러분의 커스텀 Hook이 이벤트 핸들러들을 받을 때 할 수 있는 하나의 개선이 더 있습니다.
 
-`onReceiveMessage` 종속성을 추가하는 것은 컴포넌트 재랜더링마다 채팅 재연결을 만들기 때문에 이상적이지 않습니다.
+`onReceiveMessage` 종속성을 추가하는 것은 컴포넌트를 다시 렌더링 할때마다 채팅 연결을 다시 하기 때문에 이상적이지 않습니다.
 [이 이벤트 핸들러를 Effect Event로 감싸서 종속성에서 제거하세요](https://react.dev/learn/removing-effect-dependencies#wrapping-an-event-handler-from-the-props)
 
 ```js
