--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -454,7 +454,7 @@ export function useChatRoom({ serverUrl, roomId, onReceiveMessage }) {
 어떤 외부 시스템이나 React가 내장 API로 지원하지 않는 어떤 것과 동기화 하기위해 "React 외부로 나가야"할 필요가 있다는 의미입니다.
 커스텀 Hooks로 감싸는 것은 여러분의 의도와 어떤 데이터 흐름을 가지는지 명확히 소통하도록 해줍니다.
 
-예를 들어 두 드롭다운을 표현하는 `shippingForm` 컴포넌트를 생각해보세요: 하나는 도시들의 목록을 보여주고,
+예를 들어 두 드롭다운을 표현하는 `shippingForm` 컴포넌트를 생각해보세요. 하나는 도시들의 목록을 보여주고,
 다른 하나는 선택된 도시의 지역들의 목록을 보여줍니다. 아래와 같은 코드로 시작하게 될 것입니다.
 
 ```js
