--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -497,7 +497,7 @@ function ShippingForm({ country }) {
   // ...
 ```
 
-비록 이 코드들은 매우 반복적이지만, [Effects를 각각 분리해두는 것은 옳습니다.](https://react.dev/learn/removing-effect-dependencies#is-your-effect-doing-several-unrelated-things)
+비록 이 코드들은 매우 반복적이지만, [Effects를 각각 분리해두는 게 좋습니다.](https://react.dev/learn/removing-effect-dependencies#is-your-effect-doing-several-unrelated-things)
 다른 두가지를 동기화하므로, 하나의 Effect로 합치면 안됩니다. 대신에 여러분은 `shippingForm` 컴포넌트를 공통되는 로직을
 `useData` Hook으로 추출하여서 간단하게 만들 수 있습니다.
 
