--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -169,7 +169,7 @@ function useAuth() {
 기술적으로, React에 의해 강제되는 사항은 아닙니다. 원리적으로 다른 Hook을 부르지 않는 Hook을 만들 수 있습니다.
 이는 종종 혼란스럽거나 제한적이기 때문에 그 패턴을 피하는 것이 최선입니다. 하지만 도움이 되는 흔하지 않은 케이스들이 있기도 합니다.
 예를 들어 여러분의 함수가 어떠한 Hook을 사용하지 않지만, 미래에 Hook 호출들을 추가할 계획이 있는 경우입니다.
-그런 경우, `use` 접두사를 붙이는 것이 합리적입니다.
+그런 경우, `use` 접두사를 붙이는 것이 합리적입니다:
 
 ```js
 // ✅ Good: A Hook that will likely use some other Hooks later
