--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -144,7 +144,7 @@ function getSorted(items) {
 }
 ```
 
-이로서 여러분은 이 일반 함수를 조건들을 포함하여 어디서나 호출할 수 있음을 보장할 수 있습니다.
+이로서 여러분은 이 일반 함수를 조건들을 포함하여 어디서나 호출할 수 있음을 보장할 수 있습니다:
 
 ```js
 function List({ items, shouldSort }) {
