--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -130,7 +130,7 @@ React 어플리케이션은 컴포넌트로 이루어져있습니다.
 아닙니다. Hook을 *호출*하지 않는 함수들은 Hooks가 _될_ 필요가 없습니다.
 
 여러분의 함수가 Hooks를 호출하지 않는다면, `use` 접두사를 피하세요. 대신에 `use` 접두사 _없이_ 일반적인 접두사로 작성하세요.
-예를들어 아래의 `useSorted`는 Hooks를 호출하지 않으므로, 대신 `getSorted`라고 명명하세요.
+예를들어 아래의 `useSorted`는 Hooks를 호출하지 않으므로, 대신 `getSorted`라고 명명하세요:
 
 ```js
 // 🔴 Avoid: A Hook that doesn't use Hooks
