--- a/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
+++ b/docs/learn/Escape Hatches/seperating-events-from-effects.mdx
@@ -61,7 +61,7 @@ lint를 억제하는 다른 올바른 대안에 대해서도 알아보세요.
 ## Effect 이벤트의 제한사항
 
 :::danger 작성중!
-아래 섹션은 실제 버전으로 **배포되지 않은 실험적 API**에 대해 다루고 있습니다.
+아래 섹션은 실제 안정된 React 버전으로 **배포되지 않은 실험적 API**에 대해 다루고 있습니다.
 :::
 
 Effect 이벤트는 여러분이 어떻게 사용하느냐에 따라 매우 제한적입니다.
