--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -1,7 +1,7 @@
 import {Code} from "../../../src/components/Code";
 
 :::info Deep Dive
-# Custom hook이 높은 수준의 용례들에 대해 집중하도록 하세요
+# Custom hook을 높은 수준에서 사용하세요
 
 여러분의 custom hook의 이름을 정하는것부터 시작해봅시다.
 만약 명확한 이름을 고르는데 어려움을 느낀다면, effect가 컴포넌트의 로직과 너무 깊은 관계를 맺고 있기 때문일 수도 있습니다.
