--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -21,8 +21,7 @@ import {Code} from "../../../src/components/Code";
 - ✅ useSocket(url)
 - ✅ useIntersectionObserver(ref, options)
 
-**Custom hook이 높은 수준의 용례들에 집중할 수 있게 해주세요.** Custom hook이 단순히 `useEffect` API를 감싸거나 이의 대안 정도밖에 안되는
-"생명주기" hook이 되어서는 안됩니다.
+** Custom hook을 높은 수준에서 사용하세요.** Custom hook이 단순히 `useEffect` API를 편의를 위해 감싸거나 이의 대안 정도밖에 안되는 "생명주기" hook을 만들거나 사용하는 것을 피해야 합니다.
 
 - 🔴 useMount(fn)
 - 🔴 useEffectOnce(fn)
