--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -27,7 +27,7 @@ import {Code} from "../../../src/components/Code";
 - 🔴 useEffectOnce(fn)
 - 🔴 useUpdateEffect(fn)
 
-예를 들어, 이 `useMount` hook은 어떤 코드가 "마운트 시점에" 돌아갈 수 있도록 해줍니다.
+예를 들어, 이 `useMount` hook은 코드가 "마운트 시점에" 돌아갈 수 있도록 해줍니다.
 
 ```js
 function ChatRoom({ roomId }) {
