--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -56,6 +56,8 @@ function useMount(fn) {
 하지만 linter는 반응하지 않습니다. linter는 `useEffect`의 직접적인 호출에 대해서만 검사하기 때문입니다.
 linter는 여러분의 hook에 대해 알지 못합니다.
 
+만약 여러분이 Effect를 작성하고 있다면, React API를 직접 사용하는것부터 시작해보세요.
+
 ```js
 function ChatRoom({ roomId }) {
   const [serverUrl, setServerUrl] = useState('https://localhost:1234');
