--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -91,7 +91,7 @@ function ChatRoom({ roomId }) {
 
 **좋은 custom hook은 코드의 호출을 선언적으로 만들고 스스로 무엇을 하는지 명확하게 알고 있습니다.**
 예를 들어, `useChatRoom(options)`는 오직 채팅방과 연결만 할 수 있고, `useImpressionLog(eventName, extraData)`는 오직 분석 툴에 로그를 보내는 일만 할 수 있습니다.
-만약 여러분의 custom hook API가 용례를 제한하지 않고 매우 추상적이라면, 장기적으로는 풀기 어려운 문제들을 많이 만들 것입니다.
+만약 여러분의 custom hook API가 사용되는 상황을 제한되지 않고 매우 추상적이라면, 장기적으로는 풀기 어려운 문제들을 많이 만들 것입니다.
 
 :::
 
