--- a/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
+++ b/docs/learn/Escape Hatches/reusing-logic-with-custom-hooks.mdx
@@ -183,7 +183,7 @@ fade-in 애니메이션을 *처음부터* 만든다고 가정해봅시다.
 <Code src="https://codesandbox.io/embed/condescending-merkle-w6nwnb?fontsize=14&hidenavigation=1&theme=dark" />
 
 마찬가지로 이렇게 *할 필요는* 없습니다. 일반 함수를 작성하듯, 궁극적으로는 코드의 서로 다른 부분에 경계선을 어떻게 그릴지를 결정하게 됩니다.
-혹은 전혀 다른 접근을 할 수도 있스빈다. Effect 안에 로직을 두지 않고 로직의 가장 명령적인 부분들을 JavaScript [class](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes)의 내부로 옮길 수도 있습니다.
+혹은 전혀 다른 접근을 할 수도 있습니다. Effect 안에 로직을 두지 않고 로직의 가장 명령적인 부분들을 JavaScript [class](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes)의 내부로 옮길 수도 있습니다.
 
 <Code src="https://codesandbox.io/embed/blazing-water-k3zome?fontsize=14&hidenavigation=1&theme=dark" />
 
