--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -624,7 +624,7 @@ export default function ChatRoom({ roomId, createConnection, onMessage }) {
 ```
 
 `onMessage` prop과 달리 `onReceiveMessage` Effect 이벤트는 반응하지 않습니다. 
-따라서 Effect의 종속성일 필요가 없습니다. 따라서 `onMessage`로 변경해도 채팅이 다시 연결되지 않습니다.
+따라서 `onReceiveMessage`는 Effect의 종속성일 필요가 없습니다. `onMessage`로 변경해도 채팅이 다시 연결되지 않습니다.
 
 `createConnection`은 리액티브 해야 _하므로_ 동일한 작업을 수행할 수 없습니다. 
 사용자가 암호화된 연결과 암호화되지 않은 연결을 전환하거나 현재 채팅방을 전환할 경우 Effect가 다시 동작하길 _원할 수_ 있습니다. 
