--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -601,7 +601,7 @@ Effect에서 객체를 만들면 객체가 `createConnection`으로 전달됩니
 
 이러한 함수 중 하나는 이벤트 핸들러입니다. 이벤트 핸들러 함수의 새 값에 "반응"하지 않게끔 하면서도 Effect 내부에서 이벤트 핸들러를 호출하게 하는 방법을 알고 계시나요? 그것은 도움이 될 것입니다!
 
-이러한 함수 중 다른 함수는 가져온 API 메서드에 일부 상태를 전달하는 경우에만 존재합니다. 
+이러한 함수 중 다른 함수는 가져온 API 메서드에 일부 상태를 전달하기 위해서만 존재합니다. 
 이 기능이 정말 필요합니까? 전해져야하는 필수 정보는 무엇인가요? 일부 import를 `App.js`에서 `ChatRoom.js`로 이동시켜야 할 수 있습니다.
 
 ### 정답
