--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -193,7 +193,7 @@ function ChatRoom({ roomId, onReceiveMessage }) {
   // ...
 ```
 
-Effect 이벤트는 reactive하지 않으므로 종속성으로 지정할 필요가 없습니다. 따라서 상위 컴포넌트가 모든 재렌더에서 다른 함수를 전달하더라도 채팅은 더 이상 다시 연결되지 않습니다.
+Effect 이벤트는 reactive하지 않으므로 의존성으로 지정할 필요가 없습니다. 따라서 상위 컴포넌트가 모든 렌더링마다 다른 함수를 전달하더라도 채팅은 더 이상 다시 연결되지 않습니다.
 
 ### Reactive한 코드와 그렇지 않은 코드 분리하기
 
