--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -2,7 +2,7 @@ import {Code} from "../../../src/components/Code";
 
 ## 다음 상태를 계산하기 위해 어떤 상태를 읽고 있나요?
 
-이 효과는 새 메시지가 도착할 때마다 새로 만든 배열로 `messages` 싱테 변수를 업데이트합니다:
+이 효과는 새 메시지가 도착할 때마다 새로 만든 배열로 `messages` 싱테 변수를 업데이트합니다.
 
 ```js
 function ChatRoom({ roomId }) {
