Add omitted part

--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -274,6 +274,11 @@ const [tasks, dispatch] = useReducer(tasksReducer, initialTasks);
 1. reducer 함수
 2. 초기 상태
 
+그리는 다음을 반환합니다:
+
+1. 상태로 사용되는 값
+2. dispatch 함수 (사용자의 action들을 reducer에 "보내기"위한 함수)
+
 이제 완전히 이어졌습니다! 여기서 reducer는 컴포넌트 파일의 아래에 선언되어있습니다:
 
 <Code src="https://codesandbox.io/s/eueycz?file=%2FApp.js&utm_medium=sandpack"/>
