--- a/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
+++ b/docs/learn/Escape Hatches/removing-effect-dependencies.mdx
@@ -487,3 +487,226 @@ function ChatRoom({ getOptions }) {
 이 방법은 렌더링 중에 호출해도 안전하기 때문에 [순수](https://react.dev/learn/keeping-components-pure) 함수에만 사용할 수 있습니다. 
 함수가 이벤트 핸들러이지만 변경 내용이 Effect를 다시 동기화하 않으려면 [대신 Effect 이벤트로 감쌉니다](https://react.dev/learn/removing-effect-dependencies#do-you-want-to-read-a-value-without-reacting-to-its-changes).
 
+## 되돌아보기
+
+- 종속성은 항상 코드와 일치해야 합니다.
+- 종속성이 만족스럽지 않을 때는 코드를 편집해야 합니다.
+- 린터를 억제하면 매우 혼란스러운 버그가 발생하므로 항상 피해야 합니다.
+- 종속성을 제거하려면 린터에 그 종속성이 필요하지 않다는 것을 "증명"해야 합니다.
+- 특정 상호 작용에 대한 응답으로 일부 코드를 실행해야 하는 경우 해당 코드를 이벤트 핸들러로 이동합니다.
+- 다른 이유로 Effect의 다른 부분을 다시 실행해야 하는 경우 여러 Effect로 나눕니다.
+- 이전 상태를 기준으로 일부 상태를 업데이트하려면 업데이트 함수를 전달합니다.
+- 최신 값을 "반응"하지 않고 읽으려면 Effect에서 Effect 이벤트를 추출합니다.
+- JavaScript에서 객체와 함수가 다른 시간에 만들어졌으면 다른 것으로 간주됩니다.
+- 객체 및 함수 종속성을 피하려고 합니다. 컴포넌트 외부 또는 Effect 내부로 이동합니다.
+
+:::note 문제에 도전해보세요 
+
+## 도전1. 인터벌 제설정을 수정하기
+
+이 효과는 초당 눈금이 표시되는 간격을 설정합니다. 여러분은 이상한 일이 일어나는 것을 알아차렸습니다. 
+간격이 똑딱거릴 때마다 파괴되고 다시 생성되는 것 같습니다. 
+간격이 지속적으로 다시 생성되지 않도록 코드를 수정합니다.
+
+<Code src="https://codesandbox.io/s/x99ygb?file=/App.js&utm_medium=sandpack"/>
+
+## 힌트
+
+이 Effect의 코드는 `count`에 따라 달라지는 것 같습니다. 이 의존성을 필요로 하지 않는 방법이 있나요? 
+해당 값에 대한 종속성을 추가하지 않고 이전 값을 기준으로 `count` 상태를 업데이트할 수 있는 방법이 있어야 합니다.
+
+## 정답
+
+Effect 내부에서 `count` 상태를 `count + 1`로 업데이트하려고 합니다. 
+그러나 이로 인해 Effect는 매초마다 변경되는 `count`에 따라 달라지므로 매초마다 간격이 다시 만들어집니다.
+
+이 문제를 해결하려면 [업데이트하는 함수](https://react.dev/reference/react/useState#updating-state-based-on-the-previous-state)를 사용하고 `setCount(count + 1)`
+ 대신 `setCount(c = > c + 1)`를 사용합니다:
+
+ <Code src="https://codesandbox.io/s/bpkif3?file=%2FApp.js&utm_medium=sandpack"/>
+
+Effect 내부의 `count`를 읽는 대신 `c => c + 1` 명령("이 숫자를 계산합니다!")을 React에 전달합니다. 
+React는 다음 렌더에 적용합니다. 
+또한 더 이상 Effect 내부의 `count` 값을 읽을 필요가 없으므로 Effect의 종속성을 비워둘 수 있습니다([https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame]). 
+이렇게 하면 Effect가 모든 눈금에 대한 인터벌을 다시 만들지 않습니다.
+
+## 도전2. 애니메이션이 다시 재생되는 것을 고치기
+
+이 예에서 "표시"를 누르면 환영 메시지가 사라집니다. 
+애니메이션은 몇 초 정도 걸립니다. 
+"제거"를 누르면 환영 메시지가 즉시 사라집니다. 
+페이드인 애니메이션에 대한 로직은 애니메이션.js 파일에서 플레인 JavaScript [애니메이션 루프](https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame)로 구현됩니다. 
+당신은 그 논리를 바꿀 필요가 없고 제3의 라이브러리로 취급할 수 있습니다. 
+Effect는 DOM 노드에 대한 `FadeInAnimation` 인스턴스를 만든 다음 `시작(기간)` 또는 `중지()`를 호출하여 애니메이션을 제어합니다.
+`지속 시간`은 슬라이더로 제어합니다. 슬라이더를 조정하고 애니메이션이 어떻게 변하는지 확인합니다.
+
+이 코드는 이미 작동하지만 변경할 사항이 있습니다. 
+현재 `duration` 상태 변수를 제어하는 슬라이더를 이동하면 애니메이션이 다시 트리거됩니다. 
+Effect가 `duration` 변수에 "반응"하지 않도록 동작을 변경합니다. 
+"표시"를 누르면 Effect가 슬라이더의 현재 `duration`을 사용합니다. 
+그러나 슬라이더를 움직인다고 해서 애니메이션이 다시 시작되는 것은 아닙니다.
+
+<Code src="https://codesandbox.io/s/8zzee4?file=%2FApp.js&utm_medium=sandpack"/>
+
+### 힌트
+
+Effect 안에 반응성이 없어야 하는 코드 라인이 있습니까? 반응성이 없어야하는 코드를 Effect 밖으로 이동하려면 어떻게 해야 하나요?
+
+Effect는 지속 시간의 최신 값을 읽어야 하지만 `duration`의 변화에 "반응"하지는 않습니다. 
+`duration`을 사용하여 애니메이션을 시작하지만 애니메이션을 시작해도 반응하지 않습니다. 
+비반응성 코드 부분을 Effect 이벤트로 추출하고 Effect에서 해당 함수를 호출합니다.
+
+<Code src="https://codesandbox.io/s/dyrkzy?file=%2FApp.js&utm_medium=sandpack"/>
+
+`onApear`와 같은 Effect Events는 반응성이 없으므로 애니메이션을 다시 트리거하지 않고 내부의 `지속 시간`을 읽을 수 있습니다.
+
+### 정답 
+
+Effect 는 `duration`의 최신 값을 읽어야 하지만 `duration`의 변화에 "반응"하지는 않습니다. 
+`duration`을 사용하여 애니메이션을 시작하지만 애니메이션을 시작해도 반응하지 않습니다. 
+non-reactive한 코드 줄을 Effect 이벤트로 추출하고 Effect에서 해당 함수를 호출합니다.
+
+<Code src="https://codesandbox.io/s/dyrkzy?file=%2FApp.js&utm_medium=sandpack"/>
+
+`onAppear`와 같은 Effect Events는 리액티브 하지 않으므로 애니메이션을 다시 호출하지 않고 내부의 `duration`을 읽을 수 있습니다.
+
+### 도전3. 채팅 재연결 고치기
+
+이 예에서는 "테마 변경"을 누를 때마다 채팅이 다시 연결됩니다. 
+왜 이런 일이 일어나나요? 
+서버 URL을 편집하거나 다른 대화방을 선택할 때만 대화가 다시 연결되도록 오류를 수정합니다.
+
+`chat.js`을 제3의 라이브러리로 취급: API를 확인하기 위해 참조할 수 있지만 편집하지 않습니다.
+
+<Code src="https://codesandbox.io/s/g084dx?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+### 힌트 
+
+이 문제를 해결하는 방법은 여러 가지가 있지만 궁극적으로는 객체를 종속성으로 지정하는 것을 피해야 합니다.
+
+### 정답
+Effect는 `options` 객체에 따라 달라지기 때문에 다시 실행되고 있습니다. 객체는 의도하지 않게 다시 생성될 수 있으므로 가능한 한 Effect의 종속성으로 간주되지 않도록 해야 합니다.
+가장 소극적인 해결책은 Effect 바로 밖에서 `roomId`와 `serverUrl`을 읽은 다음 의도하지 않게 변경할 수 없는 기본 값에 따라 Effect를 결정하는 것입니다. 
+Effect에서 객체를 만들면 객체가 `createConnection`으로 전달됩니다:
+
+<Code src="https://codesandbox.io/s/kc7ede?file=/ChatRoom.js&utm_medium=sandpack"/>
+
+객체 `options` prop을 보다 구체적인 `roomId`와 `serverUrl` prop으로 바꾸는 것이 훨씬 더 좋습니다:
+
+<Code src="https://codesandbox.io/s/z6nidp?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+가능한 경우 원시적인 prop을 고수하면 나중에 컴포넌트를 더 쉽게 최적화할 수 있습니다.
+
+### 도전4. 채팅 재연결 다시 수정하기
+
+이 예제는 암호화 여부와 상관없이 대화에 연결됩니다. 이 확인란을 선택 취소하고 암호화를 설정하거나 해제할 때 콘솔의 다양한 메시지를 확인합니다. 
+방을 바꿔 보세요. 그런 다음 테마를 전환해 보세요. 대화방에 연결되면 몇 초마다 새 메시지를 받게 됩니다. 선택한 테마와 색상이 일치하는지 확인합니다.
+
+이 예에서는 테마를 변경할 때마다 채팅이 다시 연결됩니다. 이걸 고쳐보세요. 수정 후 테마를 변경하면 대화가 다시 연결되지 않지만 암호화 설정을 전환하거나 대화방을 변경하면 다시 연결됩니다.
+
+`chat.js`에서 코드를 변경하지 마세요. 그 외에는 코드가 동일한 동작을 수행하는 한 모든 코드를 변경할 수 있습니다. 
+예를 들어, 전해지는 prop을 변경하는 것이 도움이 될 수 있습니다.
+
+<Code src="https://codesandbox.io/s/ktlzkl?file=%2FChatRoom.js&utm_medium=sandpack"/>
+
+### 힌트
+
+여러분은 지금 두 가지 함수, 즉 `onMessage` 및 `createConnection`를 전달하고 있습니다. 둘 다 `App`의 모든 렌더링 마다 처음부터 생성됩니다. 
+이 함수들은 매번 새로운 값으로 간주되므로 Effect를 다시 호출합니다.
+
+이러한 함수 중 하나는 이벤트 핸들러입니다. 이벤트 핸들러 함수의 새 값에 "반응"하지 않게끔 하면서도 Effect 내부에서 이벤트 핸들러를 호출하게 하는 방법을 알고 계시나요? 그것은 도움이 될 것입니다!
+
+이러한 함수 중 다른 함수는 가져온 API 메서드에 일부 상태를 전달하기 위해서만 존재합니다. 
+이 기능이 정말 필요합니까? 전해져야하는 필수 정보는 무엇인가요? 일부 import를 `App.js`에서 `ChatRoom.js`로 이동시켜야 할 수 있습니다.
+
+### 정답
+
+이 문제를 해결하는 올바른 방법은 여러 가지가 있지만 여기 가능한 해결책이 하나 있습니다.
+
+원래 예제에서 테마를 전환하면 다른 `onMessage` 및 `createConnection` 함수가 생성되어 전달되도록 합니다. 
+Effect는 이러한 함수에 따라 달라지므로 테마를 전환할 때마다 채팅이 다시 연결됩니다.
+
+`onMessage`로 문제를 해결하려면 이 문제를 Effect Event로 감쌀 필요가 있습니다:
+
+```js 
+export default function ChatRoom({ roomId, createConnection, onMessage }) {
+  const onReceiveMessage = useEffectEvent(onMessage);
+
+  useEffect(() => {
+    const connection = createConnection();
+    connection.on('message', (msg) => onReceiveMessage(msg));
+    // ...
+```
+
+`onMessage` prop과 달리 `onReceiveMessage` Effect 이벤트는 반응하지 않습니다. 
+따라서 `onReceiveMessage`는 Effect의 종속성일 필요가 없습니다. `onMessage`로 변경해도 채팅이 다시 연결되지 않습니다.
+
+`createConnection`은 리액티브 해야 _하므로_ 동일한 작업을 수행할 수 없습니다. 
+사용자가 암호화된 연결과 암호화되지 않은 연결을 전환하거나 현재 채팅방을 전환할 경우 Effect가 다시 동작하길 _원할 수_ 있습니다. 
+그러나 `createConnection`은 함수이므로 이 함수가 읽은 정보가 _실제로_ 변경되었는지 여부를 확인할 수 없습니다. 
+이 문제를 해결하려면 `App` 컴포넌트에서 `createConnection`을 전달하는 대신 날것의 `roomId` 및 `isEncrypted` 값을 전달합니다:
+
+```js 
+   <ChatRoom
+        roomId={roomId}
+        isEncrypted={isEncrypted}
+        onMessage={msg => {
+          showNotification('New message: ' + msg, isDark ? 'dark' : 'light');
+        }}
+      />
+```
+
+이제 `App`에서 `createConnection` 함수를 전달하는 대신 Effect 내부로 함수를 이동할 수 있습니다:
+
+```js 
+import {
+  createEncryptedConnection,
+  createUnencryptedConnection,
+} from './chat.js';
+
+export default function ChatRoom({ roomId, isEncrypted, onMessage }) {
+  const onReceiveMessage = useEffectEvent(onMessage);
+
+  useEffect(() => {
+    function createConnection() {
+      const options = {
+        serverUrl: 'https://localhost:1234',
+        roomId: roomId
+      };
+      if (isEncrypted) {
+        return createEncryptedConnection(options);
+      } else {
+        return createUnencryptedConnection(options);
+      }
+    }
+    // ...
+```
+
+이 두 가지 변경 후에는 더 이상 다음 함수 값에 따라 Effect가 달라지지 않습니다:
+
+```js 
+export default function ChatRoom({ roomId, isEncrypted, onMessage }) { // Reactive values
+  const onReceiveMessage = useEffectEvent(onMessage); // Not reactive
+
+  useEffect(() => {
+    function createConnection() {
+      const options = {
+        serverUrl: 'https://localhost:1234',
+        roomId: roomId // Reading a reactive value
+      };
+      if (isEncrypted) { // Reading a reactive value
+        return createEncryptedConnection(options);
+      } else {
+        return createUnencryptedConnection(options);
+      }
+    }
+
+    const connection = createConnection();
+    connection.on('message', (msg) => onReceiveMessage(msg));
+    connection.connect();
+    return () => connection.disconnect();
+  }, [roomId, isEncrypted]); // ✅ 모든 종속성이 선언됨
+```
+따라서 대화는 의미 있는 항목(`roomId` 또는 `isEncrypted`)가 변경될 때만 다시 연결됩니다:
+
+<Code src="https://codesandbox.io/s/oorctr?file=%2FChatRoom.js&utm_medium=sandpack"/>
