--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -344,6 +344,7 @@ reducer는 반드시 순수해야 하기 때문에 상태를 변경시키면 안
 - 변경하는 방식으로 reducer를 작성하고 싶다면 Immer를 사용하세요.
 
 ## 문제에 도전해보세요.  
+
 <Challenge title="이벤트 핸들러에서 action 보내기" index={1}>
   현재, `ContactList.js`와`Chat.js`안의 이벤트 핸들러들은`// TODO`코멘트를 갖고 있습니다. 입력이 작동하지 않는 이유이고, 버튼 클릭이 선택 참여자 이름을 바꾸지 않는 이유입니다.
 
@@ -400,3 +401,55 @@ dispatch({
 
 <Code src="https://codesandbox.io/s/dmj309?file=%2FChat.js&utm_medium=sandpack"/>
 </Challenge>
+
+### 도전2 :메세지를 보내면서 입력창 초기화하기 
+
+현재, "보내기" 버튼을 누르는 것은 아무것도 하지 않습니다. "보내기" 버튼에 이벤트핸들러를 추가하는 것은 다음과 같은 일을 할 것입니다:
+
+1. 받는 사람의 이메일과 메세지와 함께 'alert' 띄우기
+2. 입력창 초기화하기. 
+
+<Code src="https://codesandbox.io/s/gkinsn?file=%2FChat.js&utm_medium=sandpack"/>
+
+### 정답 
+
+"보내기" 버튼 이벤트 핸들러에서 이 작업을 수행할 수 있는 몇 가지 방법이 있습니다. 
+한 가지 접근 방식은 경고창를 표시한 다음 빈 `message`와 함께 `edited_message` 액션을 보내는 것입니다:
+
+<Code src="https://codesandbox.io/s/589v8h?file=%2FChat.js&utm_medium=sandpack"/>
+
+이제 동작하고 "보내기"를 누르면 입력창이 초기화됩니다. 
+
+그러나 *사용자의 관점에서* 메시지를 보내는 것은 필드를 편집하는 것과는 다른 작업입니다. 
+이를 반영하기 위해 대신 `sent_message`라는 *새* 작업을 생성하고 reducer에서 별도로 처리할 수 있습니다:
+
+<Code src="https://codesandbox.io/s/k7yl8v?file=%2FmessengerReducer.js&utm_medium=sandpack"/>
+
+결과 동작은 동일합니다. 그러나 작업 유형은 "상태 변경 방법"이 아니라 "사용자가 수행한 작업"을 이상적으로 설명해야 합니다. 
+이렇게 하면 나중에 기능을 더 쉽게 추가할 수 있습니다.
+
+두 해법 중 하나를 사용할 경우 경보창을 reducer 내부에 배치하지 않는 것이 중요합니다. 
+reducer는 순수 함수여야 하며 다음 상태만 계산해야 합니다. 
+사용자에게 메시지를 표시하는 것을 포함하여 아무것도 "하지" 않아야 합니다. 
+경고창을 띄우는 것은 이벤트 핸들러에서 발생해야 합니다. 
+(이와 같은 실수를 방지하기 위해 React는 엄격한 모드에서 여러 번 reducer를 호출합니다.
+이 때문에 경고창을 reducer에 넣으면 경고창이 두 번 실행됩니다.)
+
+### 도전 3: 탭을 전환할 때 입력값 보존하기
+
+이 예에서, 수신자를 변경하면 매 번 텍스트 입력창이 초기화됩니다:
+
+```js
+case 'changed_selection': {
+  return {
+    ...state,
+    selectedId: action.contactId,
+    message: '' // Clears the input
+  };
+
+```
+
+이는 여러 수신인 간에 단일 메시지 초안을 공유하지 않기 때문입니다. 
+하지만 앱이 각 연락처에 대한 초안을 별도로 "기억"하여 연락처를 전환할 때 해당 연락처를 복원하는 것이 더 나을 수 있습니다.
+
+연락처별로 별도의 메시지 초안을 기억할 수 있도록 상태가 구성되는 방식을 변경하는 것이 작업입니다. 감속기, 초기 상태 및 성분을 몇 가지 변경해야 합니다.
