Delete invalid components

--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -345,30 +345,33 @@ reducer는 반드시 순수해야 하기 때문에 상태를 변경시키면 안
 
 ## 문제에 도전해보세요.  
 
-<Challenge title="이벤트 핸들러에서 action 보내기" index={1}>
-  현재, `ContactList.js`와`Chat.js`안의 이벤트 핸들러들은`// TODO`코멘트를 갖고 있습니다. 입력이 작동하지 않는 이유이고, 버튼 클릭이 선택 참여자 이름을 바꾸지 않는 이유입니다.
+### 도전 1: 벤트 핸들러에서 action 보내기
 
-  해당하는 action을 `dispatch`하기 위해 코드로 두`// TODO`를 교체하세요. 예상한 모양과 action의 종류를 보기 위해, `messengerReducer.js` 안의 reducer를 체크하세요. 
-  reducer는 이미 작성되어 있어서 바꿀 필요는 없습니다. `ContactList.js`와`Chat.js`에서 action을 보내기만 하면 됩니다.
+현재, `ContactList.js`와`Chat.js`안의 이벤트 핸들러들은`// TODO`코멘트를 갖고 있습니다. 입력이 작동하지 않는 이유이고, 버튼 클릭이 선택 참여자 이름을 바꾸지 않는 이유입니다.
 
-  <Code src="https://codesandbox.io/s/r279gj?file=%2FApp.js&utm_medium=sandpack"/>    
-  <Flex>
-  <DetailButton name="힌트"> 
-  `dispatch`함수는 prop으로 전달되었기 때문에 컴포넌트에서 이미 이용할 수 있습니다. 
-  그래서 해당하는 action 객체로 `dispatch`를 부를 필요가 있습니다.
+해당하는 action을 `dispatch`하기 위해 코드로 두`// TODO`를 교체하세요. 예상한 모양과 action의 종류를 보기 위해, `messengerReducer.js` 안의 reducer를 체크하세요. 
+reducer는 이미 작성되어 있어서 바꿀 필요는 없습니다. `ContactList.js`와`Chat.js`에서 action을 보내기만 하면 됩니다.
 
-  객체의 모양을 확인하기 위해, reducer를 보고 어떤 `action` 필드를 볼지 확인할 수 있습니다. 예를 들어, reducer안의 `changed_selection` 케이스는 이렇게 보일 수 있습니다:
+<Code src="https://codesandbox.io/s/r279gj?file=%2FApp.js&utm_medium=sandpack"/>    
+ 
 
-  ```js
-  case 'changed_selection': {
-  return {
-    ...state,
-    selectedId: action.contactId
-  };
+### 힌트
+
+`dispatch`함수는 prop으로 전달되었기 때문에 컴포넌트에서 이미 이용할 수 있습니다. 
+그래서 해당하는 action 객체로 `dispatch`를 부를 필요가 있습니다.
+
+객체의 모양을 확인하기 위해, reducer를 보고 어떤 `action` 필드를 볼지 확인할 수 있습니다. 예를 들어, reducer안의 `changed_selection` 케이스는 이렇게 보일 수 있습니다:
+
+```js
+case 'changed_selection': {
+return {
+  ...state,
+  selectedId: action.contactId
+};
 }
-  ```  
-</DetailButton>
-<DetailButton name="해답">
+```  
+### 해답 
+
 reducer 코드에서, 필요한 action이 이렇게 생겼다는 것을 유추할 수 있습니다:
 
 ```js
@@ -388,19 +391,6 @@ dispatch({
 해당하는 메세지를 보내기 위해 업데이트된 예제가 있습니다:
 
 <Code src="https://codesandbox.io/s/dmj309?file=/App.js&utm_medium=sandpack"/>
-</DetailButton>
-  </Flex>
-</Challenge>
-
-<Challenge title="메세지를 보낼 때 입력 초기화하기" index={2}>
-현재, "보내기" 버튼을 누르는 것은 아무것도 하지 않습니다. 
-이렇게 동작할 "보내기" 버튼에 이벤트 핸들러를 붙이세요:
-
-1. 받는 이의 이메일과 메세지를 `alert`로 보여주세요.
-2. 메세지 입력을 초기화하세요.
-
-<Code src="https://codesandbox.io/s/dmj309?file=%2FChat.js&utm_medium=sandpack"/>
-</Challenge>
 
 ### 도전2 :메세지를 보내면서 입력창 초기화하기 
 
