--- a/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
+++ b/docs/learn/Managing State/extracting-state-logic-into-a-reducer.mdx
@@ -1,5 +1,5 @@
-import {Code} from "../../../src/components/Code";
-import {BlockQuote} from "../../../src/components/BlockQuote";
+import { Code } from '../../../src/components/Code';
+import { BlockQuote } from '../../../src/components/BlockQuote/BlockQuote';
 
 # 상태 로직을 Reducer로 추출하기
 
