--- a/docs/learn/Adding Interactivity/adding-interactivity.mdx
+++ b/docs/learn/Adding Interactivity/adding-interactivity.mdx
@@ -1,6 +1,8 @@
 import { Code } from '../../../src/components/Code';
 import { Card } from '../../../src/components/Card';
 
+# 상호작용성 추가하기 
+
 화면 구성요소들은 유저 입력에 반응하여 업데이트됩니다. 예를 들어 이미지 갤러리를 클릭하는 것은 동적인 이미지로 변경합니다 React에서 시간에 따라 변경되는 데이터를 _state_ 라고 부릅니다. 여러분은 어떤 컴포넌트에도 state를 추가할 수 있으며 필요에 따라 업데이트할 수 있습니다. 이 챕터에서, 상호작용을 관리하고 상태를 업데이트하고 시간 흐름에 따라 다른 출력을 표현하는 컴포넌트를 작성하는 법을 배울 것입니다.
 
 :::note In this chapter
