Revert "Polish sidebar  (#51)"
This reverts commit 4cadab604a454a344a4d66ac6808784511057e46.

--- a/docs/learn/Managing State/passing-data-deeply-with-context.mdx
+++ b/docs/learn/Managing State/passing-data-deeply-with-context.mdx
@@ -1,7 +1,7 @@
 import {Code} from "../../../src/components/Code";
 import {BlockQuote} from "../../../src/components/BlockQuote/BlockQuote";
 
-# Context를 이용해 데이터를 깊게 넘기기
+# context를 이용해 데이터를 깊게 넘기기
 
 보통, 부모 컴포넌트에서 자식 컴포넌트로 props를 통해 정보를 넘깁니다.
 하지만 props를 넘기는 것은 중간에 많은 컴포넌트들을 통과해서 넘겨야 하거나 많은 컴포넌트들이 같은 정보를 필요로 한다면 불편하고 불필요한 코드가 많아질 수 있습니다.
