--- a/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
+++ b/docs/learn/Escape Hatches/you-might-not-need-an-effect.mdx
@@ -1,6 +1,6 @@
 import { Code } from '../../../src/components/Code';
 
-# Effect가 필요하지 않을 가능성
+# Effect가 필요하지 않을 수 있습니다.
 
 Effect는 React 패러다임의 탈출구입니다. React에서 "벗어나게"하고 여러분의 컴포넌트를
 React가 아닌 위젯, 네트워크 또는 브라우저 DOM같은 다른 외부 시스템과 동기화 하도록 합니다.
